Fix body spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,11 @@ header {
   background-color: white;
 }
 
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
 h2 {
   font-size: 35px;
   margin-top: 0;
